--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@medusajs/medusa": "^1.7.5",
+    "@types/lodash": "^4.14.195",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@types/react-instantsearch-dom": "^6.12.3",
